Fixed bugs with z-index styles

--- a/src/app/what-we-do/page.module.scss
+++ b/src/app/what-we-do/page.module.scss
@@ -33,7 +33,7 @@
     letter-spacing: -.84px;
     line-height: 90%;
     position: absolute;
-    z-index: 5;
+    z-index: 2;
     left: 100px;
     bottom: 20%;
     color: #FFFFFF;
